[package]
name = "fuel-host"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
native-tls = "0.2"

[target.'cfg(not(windows))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
